[tool.poetry]
name = "racingmaster-rankhelper"
version = "1.1.0"

description = "巅峰极速车辆数据及排位计分车推荐 - RacingMaster-RankHelper"
authors = ["VictorStacker"]
readme = "README.md"
packages = [{include = "rm_rank"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.40.0"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
PyQt6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.92.0"
black = "^23.12.0"
mypy = "^1.7.1"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
rm-rank = "rm_rank.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
